# cyclic-scheduling-fitness-evaluator

./: .gitignore  README.md  pyproject.toml
cyclic_scheduling_dse/: __init__.py  mapping.py  stream_compatibility_layer.py
cyclic_scheduling_fitness_evaluator/: mapping.py  stream_compatibility_layer.py
cyclic_scheduling_fitness_evaluator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
example/: Conversion.ipynb  CyclicScheduler.ipynb  Example.ipynb  StreamScheduler.ipynb  model.lp  test.py
example/architecture/: eyeriss_like_dual_core.py  eyeriss_tpu.py
example/mapping/: mccnn_mapping.py  resnet_3_residual_mapping.py  resnet_mapping.py  resnet_mapping_3_convolutions.py  super_resolution_mapping.py
example/problems/: resnet18_without_matmul.onnx
example/workload/: mccnn.py  resnet18_3_convolutions.onnx  resnet18_3_residuals.onnx  resnet_3_residual.onnx
