[project]
name = "cyclic_scheduling_fitness_evaluator"
version = "0.1.0"
description = ""
authors = [{ name="Andrea Nardi", email="buongiorno19972@gmail.com"}]

dependencies = [
    "networkx >= 3",
    "sdf-expander@git+https://github.com/Andful/sdf-expander.git",
    "gurobipy >= 11",
    "stream-dse@git+https://github.com/Andful/stream-fork.git@draft-custom-fitness-evaluation",
    "notebook >= 7",
    "matplotlib == 3.6",
    "plotly",
    "pandas",
]
